# my-agent

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
.claude/: auto-commit.sh  settings.json
docs/: linux-io-epoll-internals.md  multi-agent-learning-roadmap.md  python-async-concurrency.md
docs/notes/: example-hooks.json  iter-0-retro.md  iter-1-retro.md  iter-11-retro.md  iter-2-retro.md  iter-3-retro.md  iter-4-retro.md  iter-5-retro.md  iter-6-retro.md  iter-7-retro.md  iter-8-retro.md  v1.1-state-of-project.md
docs/plans/: 2026-05-15-my-agent-design.md  2026-05-15-my-agent-implementation-plan.md  2026-05-21-mcp-demo-server-design.md  2026-05-21-mcp-demo-server-implementation-plan.md
mydocs/specs/: 2026-05-22_14-30_my-agent-skill-component.md
src/my_agent/: __main__.py  _logging.py  config.py
src/my_agent/agent/: context.py  conversation.py  (+5 more)
tests/: conftest.py
tests/integration/: test_iter0_smoke.py
tests/unit/: test_agent_loop.py  test_agent_loop_stream.py  test_assemble_stream.py  test_cli.py  test_cli_iter1.py  test_cli_render.py  test_cli_repl.py  test_config.py  test_context_manager.py  test_conversation.py  test_hooks.py  test_hooks_integration.py  test_langfuse_plugin.py  test_llm_client.py  test_llm_stream.py  test_llm_types.py  test_logging_setup.py  test_mcp_adapter.py  test_mcp_client.py  test_mcp_config.py  test_memory.py  test_stream_events.py  test_task_tool.py  test_token_count.py  test_tools_base.py  test_tools_files.py  test_tools_memory.py  test_tools_shell.py  test_tools_web.py  test_web_app.py  test_web_sessions.py
(+21 files in other folders)
